--- a/HACKING
+++ b/HACKING
@@ -28,6 +28,7 @@ To help development we assume ./configure sets these variables for make
 
    CC     -- gcc
    CC32   -- i686-unknown-linux-gnu-gcc (or on x86, also gcc)
+   CC64   -- gcc for use with Mes C Library: -nostdinc, -nostdlib
    GUILE  -- guile
    HEX2   -- hex2
    MES    -- unset
@@ -41,8 +42,12 @@ during development.
 Gcc is used to verify the sanity of our C sources.
 
 i686-unknown-linux-gnu-gcc is used to compare hex/assembly, to test
-the gcc variant of Mes-libc: lib/libc-gcc.c and steal ideas.  Target
-prefix: mlibc-gcc.
+the gcc variant of Mes C Libirary.
+Target prefix: mes-gcc.
+
+gcc (CC64) -nostdinc,-nostdlib is used to compare hex/assembly, to test
+the 64bit variant of Mes C Library.
+Target prefix: x86_64-mes-gcc.
 
 Guile is used to develop MesCC, the C compiler in Scheme that during
 bootstrapping will be executed by Mes.
@@ -66,40 +71,31 @@ mes.c.
 * ROADMAP
 ** TODO
 *** release 0.x, unsorted
-  - upstream mes-boot to GuixSD.
-  - replace bootstrap utils (with gash?): flex, bash, bzip2,
-    coreutils, gawk, grep, gzip, sed, tar.
+  - replace bootstrap utils with Gash: bash, coreutils, grep, gzip,
+    sed, tar.
   - tcc: remove or upstream patches from tcc-boot.
-  - tcc: build 0.9.27 directly instead of via 0.9.26,
-    see tinycc wip-bootstrappable@0.9.27 branch
+  - tcc: build 0.9.27 directly instead of via 0.9.26, see tinycc
+    wip-bootstrappable@0.9.27 branch
+  - mes: performance!
   - mes: prepare src/mes.c for M2-Planet transpiler,
     Jeremiah branched-out from mes; see https://github.com/oriansj/mes-m2.
   - mes: real module support, bonus for supporting Guile's define-module/define-public syntax.
-  - mes: we're a full Scheme now, drop .MES suffix, use .SCM.
-    + find a way to fix foo.mes/foo.scm trickery (full Guile-like module support?)
-    + how about setting `guile' or even `guile-2' cond-expand features
-      for external libraries (Nyacc) we look like Guile/Guile-2
-      internally, we could make sure to start every cond-expand with (mes)
-  - mes: use more efficient scheme continuation stack (wip-array?)
-  - mes: drop SCM stack in C / implement call/cc a la guile-1.8 setjmp?
-  - mes/mescc: bootstrap a minimal-Guile
+  - mes/mescc: bootstrap a minimal-Guile?
     + libguile/{eval,init,list,strings,values,..}.c
     + ice-9/eval.scm
   - mescc: have mes-tcc pass all scaffold/tests, scaffold/tinycc tests.
-  - mescc: support long long.
+  - mescc: support long long?
   - mescc: full support for floats?
-  - mescc: some success with 8cc,pcc,guile/libguile/eval.c.
+  - mescc: some success with 8cc,pcc,guile/libguile/eval.c?
   - build: guile/guix/make.scm: add file-types, intermediate, hash all dependencies
-  - build: make.scm: imperative->declaritive
   - get full source syntax-case up (Andre van Tonder?) OR drop it.
     https://srfi.schemers.org/srfi-72/srfi-72.html
     psyntax/syntax-case and rewrite Nyacc without syntax-case+R7RS Ellipsis.
   - mescc: split-off MesCC as as standalone Guile C compiler project.
 *** release 1.0
-  - replace GuixSD's bootstrap binaries for x86.
-  - add x86_64, replace GuixSD's bootstrap binaries for x86_64.
   - more architectures (does GuixSD require this, i.e. before 1.0?).
 ** DONE
+*** 0.18 GNU mes now supports GuixSD bootstrap (x86,x86_64) and has native x86_64 support.
 *** 0.17.1 GNU Mes now allows removing glibc, binutils and gcc from the GuixSD bootstrap.
 *** 0.17 GNU Mes is now an official GNU project and bootstraps gcc-4.7.4.
 *** 0.16.1 Mes now has info docs and installs ootb on Debian buster/testing.
@@ -261,3 +257,7 @@ https://miyuki.github.io/2017/10/04/gcc-archaeology-1.html
 ** rain1's Bootstrapping Wiki: https://bootstrapping.miraheze.org/wiki/Main_Page
 ** rain1's hex86
 https://notabug.org/rain1/hex86/src/master/tests/hex0b3.hex86
+** <pdewacht> janneke, have you ever tried testing mescc with csmith?  [10:55]
+** <pdewacht> e.g. as described here
+           https://jamey.thesharps.us/2016/07/15/testing-strategies-for-corrode/
+           ("Randomized testing with Csmith and C-Reduce")  [10:58]
