--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-#+COMMENT:                                                            -*- org -*-
+g#+COMMENT:                                                            -*- org -*-
 #+TITLE: About GNU Mes
 
 #+SUBTITLE: Maxwell Equations of Software
 
-[[https://www.gnu.org/software/mes][GNU Mes]] aims to help create full
-source bootstrapping for GNU/Linux distributions such as
-[[https://www.gnu.org/software/guix][GuixSD]] as part of the
+[[https://www.gnu.org/software/mes][GNU Mes]] brings a [[http://joyofsource.com/reduced-binary-seed-bootstrap.html][Reduced Binary Seed bootstrap]] to [[https://www.gnu.org/software/guix][GuixSD]] and
+potentially to any other interested GNU/Linux distribution, and aims
+to help create a full source bootstrap as part of the
 [[http://bootstrappable.org][bootstrappable builds]] effort.
 
 It consists of a mutual self-hosting Scheme interpreter written in
@@ -20,9 +20,9 @@ C-compiler: MesCC.
 
 Mes+MesCC can compile an only [[http://gitlab.com/janneke/tinycc][lightly patched TinyCC]] that is
 self-hosting.  Using this tcc and the Mes C library we now have a
-reduced-binary-seed bootstrap for the gnutools triplet: glibc-2.16.0,
-binutils-2.20.1, gcc-4.7.4.  This is enough to replace the GuixSD
-boostrap for i686-linux.
+Reduced Binary Seed bootstrap for the gnutools triplet: glibc-2.2.5,
+binutils-2.20.1, gcc-2.95.3.  This is enough to bootstrap GuixSD for
+i686-linux and x86_64-linux.
 
 Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%201.5%20Programmers%20Manual.pdf][LISP-1.5]] -- John
 McCarthy page 13, GNU Guix's source/binary packaging transparency and
@@ -48,15 +48,17 @@ General Public Licence version 3 or later.  See the file [[file:COPYING][COPYING
 * REPL it
 
    #+BEGIN_SRC bash
-   src/mes.gcc        # default (64 bit) gcc-compiled
-   src/mes.mlibc-gcc  # 32 bit, gcc -nostdlib
-   src/mes            # 32 bit, bootstrapped, mes.M1+MesCC-compiled
+   src/mes.gcc-out            # default (64 bit) gcc-compiled
+   src/mes.mes-gcc-out        # 32 bit, gcc -nostdlib, Mes C Lib
+   src/mes.mes-out            # 32 bit, bootstrapped, mes.M1+MesCC-compiled
+   src/mes.x86_64-mes-gcc-out # 64 bit, gcc -nostdlib, Mes C Lib
+   src/mes.x86_64-mes-out     # 64 bit, bootstrapped, mes.M1+MesCC-compiled
    #+END_SRC
 
 * MesCC compiler
 
    #+BEGIN_SRC bash
-   scripts/mescc -c scaffold/main.c
+   ./pre-inst env mescc -c scaffold/main.c
    #+END_SRC
 
 * Bugs
