admin: Release update.
* doc/announce/ANNOUNCE-0.18: New file.
* guix/git/mes.scm (mes): Update hash.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-g#+COMMENT:                                                            -*- org -*-
+#+COMMENT:                                                            -*- org -*-
 #+TITLE: About GNU Mes
 
 #+SUBTITLE: Maxwell Equations of Software
