build: Cater for bootstrap build.
* build-aux/build.sh.in: Build bin/mes.  Update scripts and users.
* build-aux/bootstrap.sh.in: Update.
* build-aux/install.sh.in: Install all built bin/mes-* flavours.
* configure: Drop SEED, support --bootstrap.
* configure.sh: Likewise.

--- a/doc/mes.texi
+++ b/doc/mes.texi
@@ -521,7 +521,7 @@ build-aux/check-boot.sh
 Run a single Mes boot test
 
 @example
-MES_BOOT=scaffold/boot/00-zero.scm src/mes
+MES_BOOT=scaffold/boot/00-zero.scm bin/mes
 @end example
 
 Run a single Mes Scheme test
